--- a/bootSam1.html
+++ b/bootSam1.html
@@ -7,10 +7,10 @@
 <body>
      <div class="container">
      	<div class="row">
-                  <div class="col-md-9" style="border: 1px solid #000">
+                  <div class="col-md-9 col-xs-3 col-sm-3" style="border: 1px solid #000">
                   	<p>hhhhh</p>
                   </div>
-                   <div class="col-md-3" style="border: 1px solid #000">
+                   <div class="col-md-3 col-xs-3 col-sm-3" style="border: 1px solid #000">
                    	<p>every one</p>
                    </div>      
             </div>
