--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Index</title>
 </head>
 <body>
-    <p><a href="bootSam1.html"></a></p>
+    <p><a href="bootSam1.html">Sam1</a></p>
     <p><a href="bootSam2.html"></a></p>
    
 </body>
